# ToDoList

./: .pre-commit-config.yaml  README.txt  pyproject.toml
core/: admin.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
todolist/: settings.py  urls.py
