[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Give_Kenzo <egorsh2405@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.0.1"
environ = "^1.0"
djangorestframework = "^3.15.1"
social-auth-app-django = "^5.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
